  presolving round, given no further reductions will be found; can be used to ensure that a presolver is called very late
- new methods SCIPenableVarHistory() and SCIPdisableVarHistory() which can be used to turn off and on the collection
  of variables statistics which is used for example for branching

performance improvements:
- improved scaling of linear constraints, linear constraints with integral variables will now be scale with
  1e+06/MAX(maximal absolute coefficient, 1.0) instead of 1e+03/MAX(maximal absolute coefficient, 1.0);
  if all coefficients are in absolute value equal they will be scaled by that
- if probing reached the end of all variables it will restart the probing cycle correctly
- improved intdiving heuristic by activating backtracking to a different fixing value
- improved scaling by choosing the smallest scaler
- if first root lp is solved and the optimality is rejected by SCIP, there won't be an unnecessary solving of the lp
  from scratch again
- automatically turn off separation in sepa_oddcycle if it was too unsuccessful within the last calls
- use faster Dijkstra variants in sepa_oddcycle
- improved pseudo objective propagator
- streamlined initlp functions in cons_indicator, cons_sos1, cons_sos2 (add rows only if needed)
- added clique presolving for and-constraints, which checks if two operands or one operand and the resultant are in a
  clique and then fixes the resultant to 0 and in the former case we can delete the and-constraint too

plugins:
- added new presolver convertinttobin, which converts bounded integer variables to their binary representation, e.g.
  for integer variable 0 <= x <= 10 the binary variables y0, y1, y2, and y3 are created, such that
  1 y0 + 2 y1 + 4 y2 + 8 y3 <= 10 and x = 1 y0 + 2 y1 + 4 y2 + 8 y3
- added nlpdiving heuristic that comprises several civing heuristics using an NLP relaxation
- added new presolver gateextraction, which tries to find and-gates/constraints with two operands which are linearized